Fixed alignment issue

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6,9 +6,7 @@
     font-size: 85px;
     color: red;
 }
-.button{
-    float: right;
-}
+
 
 /* Navigation bar */
 .nav a{
